# onnxruntime-build

./: README.md  aarch64-linux-gnu.toolchain.cmake  arm-linux-gnueabihf.toolchain.cmake  build-static_lib.sh  build-wasm-static_lib.sh
.github/workflows/: aarch64-217.yaml  aarch64-linux-gnu.yaml  android-static.yaml  android.yaml  arm-linux-gnueabihf.yaml  build.yml  ios.yaml  linux-217.yaml  linux.yaml  macos-arm64.yaml  macos-universal2.yaml  macos-x64.yaml  risc-v.yaml  update.yml  wasm-simd-threads.yaml  wasm-simd.yaml  windows-arm64.yaml  windows-x64-debug.yaml  windows-x64.yaml  windows-x86-debug.yaml  windows-x86.yaml
static_lib/: CMakeLists.txt  bundle_static_library.cmake  compat.c  disable_c23.h
